# MaxMatching

./: .gitignore  CMakeLists.txt  test_all.py
src/: alternating_tree.cpp  alternating_tree.h  graph.cpp  graph.h  graph.hpp  main.cpp  matching.cpp  matching.h  maximum_matching_algorithm.cpp  maximum_matching_algorithm.h  nested_shrinking.cpp  nested_shrinking.h  nested_shrunken_graph.cpp  nested_shrunken_graph.h  perfect_matching_algorithm.cpp  perfect_matching_algorithm.h  representative.h  representative_vector.h  union_find.cpp  union_find.hpp
test/: MatchingTest.cpp  ShrinkerTest.cpp  TestMain.cpp
